--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
         <a href="https://hostingjson.azurewebsites.net/"><p>MY Json files </p></a>
 
         <a href="https://wdpfinalprojectproposal.azurewebsites.net/"><p>Final project proposal </p></a>
+        
+        <a href="https://mustangv2wdp.azurewebsites.net/"><p>Final project proposal </p></a>
 
 
 
