--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <a href="https://wdpfinalprojectproposal.azurewebsites.net/"><p>Final project proposal </p></a>
         
-        <a href="https://mustangv2wdp.azurewebsites.net/"><p>Final project proposal </p></a>
+        <a href="https://mustangv2wdp.azurewebsites.net/"><p>Mustang V2 </p></a>
 
 
 
