--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         <a href="https://mustangv2wdp.azurewebsites.net/"><p>Mustang V2 </p></a>
 
 
-
-
         <a href="https://mustangwdp.azurewebsites.net/"><p>Mustang v1 </p></a>
+        
+        <a href="https://mv3wdp.azurewebsites.net"><p>Mustang V3 </p></a>
 
 
         
